# boros

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  DESIGN.md  README.md  flake.nix  justfile  meson.build  meson.options  pyproject.toml  x.py
boros/: _impl.pyi
docs/: conf.py  index.rst  reference.rst
docs/internals/: architecture.rst  index.rst  io_with_io_uring.rst  task_management.rst
src/: meson.build  module.c  module.h  run.c  run.h  task.c  task.h
src/boros/: _impl.pyi  _low_level.pyi  meson.build
src/boros/_low_level/: atomics.hpp  cqueue.cpp  cqueue.hpp  event_loop.cpp  event_loop.hpp  extension.cpp  extension.hpp  macros.hpp  mmap.cpp  mmap.hpp  python.hpp  ring.cpp  ring.hpp  squeue.cpp  squeue.hpp  task.cpp  task.hpp
src/boros/_low_level/io/: atomics.hpp  cqueue.cpp  cqueue.hpp  mmap.cpp  mmap.hpp  ring.cpp  ring.hpp  squeue.cpp  squeue.hpp
src/boros_binding/: meson.build
src/boros_binding/binding/: conversion.hpp  func_traits.hpp  method.hpp  module.hpp  object.hpp
src/boros_binding/include/binding/: conversion.hpp  method.hpp  module.hpp  object.hpp  property.hpp  python.hpp
src/boros_impl/: meson.build  module.c  module.h  run.c  run.h  task.c  task.h  util.c  util.h
src/boros_impl/context/: run_config.c  run_config.h  state.c  state.h
src/boros_impl/driver/: proactor.h
src/boros_impl/io/: proactor.c  proactor.h
src/boros_impl/op/: base.c  base.h  cancel.c  cancel.h  close.c  close.h  fsync.c  fsync.h  linkat.c  mkdir.c  mkdir.h  nop.c  nop.h  open.c  open.h  read.c  read.h  rename.c  rename.h  socket.c  socket.h  symlinkat.c  symlinkat.h  write.c  write.h
src/boros_impl/util/: outcome.c  outcome.h  python.c  python.h  sockaddr.c  sockaddr.h
src/driver/: handle.c  handle.h  proactor.c  run_config.c  run_config.h
src/impl/: cqueue.cpp  cqueue.hpp  implmodule.cpp  implmodule.hpp  macros.hpp  meson.build  module.cpp  operation.cpp  operation.hpp  python_utils.cpp  python_utils.hpp  ring.cpp  ring.hpp  runtime.cpp  runtime.hpp  squeue.cpp  squeue.hpp  task.cpp  task.hpp  utils.cpp  utils.hpp
src/impl/io_uring/: atomics.hpp  cqueue.cpp  cqueue.hpp  mmap.cpp  mmap.hpp  ring.cpp  ring.hpp  squeue.cpp  squeue.hpp
src/impl/wrapper/: conversion.hpp  lifecycle.hpp  module.hpp  python.hpp  python_header.hpp  types.hpp  weakref.cpp  weakref.hpp
src/op/: accept.c  accept.h  base.c  bind.c  bind.h  cancel.c  close.c  close.h  connect.c  connect.h  fsync.c  linkat.c  linkat.h  listen.c  listen.h  mkdir.c  nop.c  nop.h  open.c  read.c  recv.c  recv.h  rename.c  send.c  send.h  socket.c  socket.h  sockopt.c  sockopt.h  statx.c  statx.h  symlinkat.c  unlinkat.c  unlinkat.h  write.c  write.h
src/util/: outcome.c  python.c  python.h  sockaddr.c  sockaddr.h
tests/_impl/: conftest.py  test_dir.py  test_file.py  test_nop.py  test_runtime.py  test_socket.py  test_types.py
tests/_low_level/: test_ring_submissions.py  test_state_management.py
