[project]
name = "boros"
version = "0.1.0"
license = "ISC"
license-files = ["LICENSE"]
description = "A library for asynchronous I/O with io_uring"
readme = "README.md"
authors = [{ name = "Valentin B.", email = "valentin.be@protonmail.com" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]

[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[tool.meson-python.args]
setup = ["-Db_lto=true", "-Dliburing_source=bundled"]
install = ["--skip-subprojects"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]
docs = [
    "sphinx>=9.0.0",
    "sphinx-codeautolink>=0.17.5",
    "sphinx-copybutton>=0.5.2",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]
