# boros_binding: Header-only bindings to the native CPython API.
#
# This is a wrapper around the native Python.h header providing
# an easier-to-use API which tries to reduce the boilerplate of
# making a native extension module as much as possible.

boros_binding_dep = declare_dependency(
    include_directories: include_directories('include'),
)
